Initial commit for fura-varan branch of Vanilla Music application.
Adding dependency to jflac library. Show info about file/playback sample rate and about file/playback bit depth. Replacing default MediaPlayer with my Decoder using jflac library to get audio data in 24bits per sample format and pass it into AudioTrack instance as float.

--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,12 @@ android {
 
     defaultConfig {
         applicationId "ch.blinkenlights.android.vanilla"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 25
+    }
+
+    dependencies {
+        compile 'org.jflac:jflac-codec:1.5.2'
     }
 
     sourceSets {
